compiler/actonc/test/typeerrors/ex16.golden
Building file test/typeerrors/ex16.act using temporary scratch directory
  Compiling ex16.act with Debug
[error]: Constraint violation
     +--> ex16.act@6:9-6:22
     |
   6 |         foo.append(4)
     :         ^------------
     :         `- ?__builtin__.list[__builtin__.int] does not have an attribute append
     :            Hint: you may need to test if foo is not None
-----+
